crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@legacy_get_set.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/legacy_get_set.pcode
---
Ok:
  actions:
    - ConstantPool:
        - y
        - x
        - "get(\\\"x\\\"): "
        - "get(x): "
        - "set(x, 15);"
        - "x = "
        - "y = "
    - Push:
        - Constant: 0
    - Push:
        - Integer: 5
    - DefineLocal
    - Push:
        - Constant: 1
    - Push:
        - Constant: 0
    - DefineLocal
    - Push:
        - Constant: 2
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 3
    - Push:
        - Constant: 1
    - GetVariable
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 4
    - Trace
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Integer: 15
    - SetVariable
    - Push:
        - Constant: 5
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 6
    - Push:
        - Constant: 0
    - GetVariable
    - Add2
    - Trace
  label_positions: {}
