crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@legacy_operators.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/legacy_operators.pcode
---
Ok:
  actions:
    - ConstantPool:
        - a
        - b
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - StringEquals
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - StringGreater
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - StringLess
    - Not
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - StringLess
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - StringGreater
    - Not
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - StringEquals
    - Not
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - And
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - Not
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Or
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - StringAdd
    - Trace
  label_positions: {}
