crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@push_nan.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/push_nan.pcode
---
Ok:
  actions:
    - Push:
        - Float: NaN
        - Float: inf
  label_positions: {}
